--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,13 @@
     "no-alert": ["off"],
     "jsx-a11y/no-static-element-interactions": ["off"]
   },
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "requireConfigFile": false,
+    "babelOptions": {
+      "presets": ["@babel/preset-react"]
+    }
+  },
   "globals": {
     "alert": true,
     "localStorage": true,
