--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "declaration": true,
-    "declarationMap": true
+    "declarationMap": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictNullChecks": true
   },
   "include": [
     "src"
