--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@types/material-ui": "^0.21.9",
     "@types/node": "^16.4.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
